# Elarion

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  compile_flags.txt  debug.sh
inc/: animation.hxx  game_loop.hxx  input_map.hxx  main.hxx  player.h  player.hxx  window.hxx
inc/network/: connection.h  enet_wrapper.h  handler.h
inc/ui/: button.hxx  textbox.hxx
src/: animation.cxx  game_loop.cxx  main.c  main.cxx  main.rs  player.c  player.cxx  player.rs  window.cxx
src/network/: connection.c  enet_wrapper.c  handler.c
src/ui/: button.cxx  textbox.cxx
